<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedbackActivity" >

    <EditText
        android:id="@+id/editText_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/feedback_message_hint"
        android:inputType="textMultiLine"
        android:maxLength="1024" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dadada" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <EditText
            android:id="@+id/editText_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/feedback_contact_hint"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_btn_send" />
    </LinearLayout>

</LinearLayout>