<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:triangle="http://schemas.android.com/apk/res/mynuaa.whatever"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:ellipsize="middle"
        android:singleLine="true"
        android:text="@string/mymessage_r_test"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/mymessage_r_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="6dp"
            android:text="@string/notify_from"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.rockerhieu.emojicon.EmojiconTextView
            android:id="@+id/textView_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:ellipsize="middle"
            android:singleLine="true"
            android:text="@string/mymessage_test"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <mynuaa.whatever.TriangleCornerView
            android:id="@+id/imageView_corner"
            android:layout_width="28dp"
            android:layout_height="match_parent"
            triangle:color="@color/message_list_item_color_test" />
    </LinearLayout>

</LinearLayout>