<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2fb8e6"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/imageView_head"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_margin="6dp"
            android:scaleType="fitXY"
            android:src="@drawable/head_none" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/who_id"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/textView_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/who_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/who_phone"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/textView_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#fff" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/who_contact_no"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_allow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/who_allow"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>